--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "axios": "^1.7.7",
+    "next": "15.0.1",
+    "openai": "^4.68.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pdf-highlighter": "^8.0.0-rc.0"
   },
   "devDependencies": {
     "postcss": "^8",
